--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
+    "fast-array-diff": "^1.0.1",
     "hbs": "^4.1.2",
     "jsonwebtoken": "^8.5.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "nodemailer": "^6.7.2",
+    "remove-value": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.14"
