--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "nodemailer": "^6.7.2",
-    "remove-value": "^1.0.0"
+    "remove": "^0.1.5",
+    "remove-value": "^1.0.0",
+    "value": "^0.4.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.14"
