--- a/package.json
+++ b/package.json
@@ -4,28 +4,34 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "build:css": "postcss public/css/tailwind.css -o public/css/main.css"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "autoprefixer": "^10.4.8",
     "axios": "^0.24.0",
+    "base64-u8array-arraybuffer": "^1.0.3",
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.2",
+    "body-parser": "^1.20.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^10.0.0",
-    "express": "^4.17.3",
+    "express": "^4.18.1",
     "express-fileupload": "^1.3.1",
     "express-validator": "^6.14.0",
     "fast-array-diff": "^1.0.1",
     "hbs": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
-    "nodemailer": "^6.7.2",
+    "nodemailer": "^6.7.5",
+    "postcss": "^8.4.14",
+    "postcss-cli": "^10.0.0",
     "remove-value": "^1.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.19",
+    "tailwindcss": "^3.1.7"
   }
 }
