--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "fast-array-diff": "^1.0.1",
     "hbs": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
-    "mysql2": "^2.3.3",
+    "mysql": "^2.18.1",
     "nodemailer": "^6.7.5",
     "postcss": "^8.4.14",
     "postcss-cli": "^10.0.0",
