--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
+  "engines":{
+    "node": "14.x"
+  },
+ 
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "node app.js",
     "build:css": "postcss public/css/tailwind.css -o public/css/main.css"
   },
   "keywords": [],
