--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
  
   "scripts": {
-    "start": "node app.js",
+    "start": "nodemon app.js",
     "build:css": "postcss public/css/tailwind.css -o public/css/main.css"
   },
   "keywords": [],
